force-app/main/default/objects/ShippingDivision__c/ShippingDivision__c.object-meta.xml
<CustomObject>
    
    <label>Divisão de Remessa</label>
    <nameField>
        <label>Divisão de Remessa</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Divisões de Remessa</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>