force-app/main/default/objects/ShippingDivision__c/fields/ConfirmedQuantity__c.field-meta.xml
<CustomField>
    <fullName>ConfirmedQuantity__c</fullName>
    <label>Quantidade Confirmada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>