force-app/main/default/objects/ShippingDivision__c/fields/DeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDate__c</fullName>
    <label>Data de Entrega</label>
    <required>true</required>
    <type>Date</type>
</CustomField>