force-app/main/default/objects/ShippingDivision__c/fields/OrderCurrency__c.field-meta.xml
<CustomField>
    <fullName>OrderCurrency__c</fullName>
    <formula>Text(OrderItem__r.Order.Currency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Moeda do pedido</label>
    <type>Text</type>
</CustomField>