force-app/main/default/objects/ShippingDivision__c/fields/OrderItem__c.field-meta.xml
<CustomField>
    <fullName>OrderItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto do pedido</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Divisões de Remessa</relationshipLabel>
    <relationshipName>ShippingDivisions</relationshipName>
    <type>Lookup</type>
</CustomField>