force-app/main/default/objects/ShippingDivision__c/fields/RecalcShare__c.field-meta.xml
<CustomField>
    <fullName>RecalcShare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recalcular Aprovadores</label>
    <type>Checkbox</type>
</CustomField>