force-app/main/default/objects/ShippingDivision__c/fields/RefuseQuantity__c.field-meta.xml
<CustomField>
    <fullName>RefuseQuantity__c</fullName>
    <description>Campo criado para multiplicar a quantidade da remessa com o valor unitário.</description>
    <formula>IF(ISBLANK(RefuseReason__c), Quantity__c * -1, Quantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Campo criado para multiplicar a quantidade da remessa com o valor unitário.</inlineHelpText>
    <label>Quantidade recusada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>