force-app/main/default/objects/ShippingDivision__c/fields/RefuseReason__c.field-meta.xml
<CustomField>
    <fullName>RefuseReason__c</fullName>
    <label>Motivo de Recusa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>