force-app/main/default/objects/ShippingDivision__c/fields/SAPNumber__c.field-meta.xml
<CustomField>
    <fullName>SAPNumber__c</fullName>
    <label>SAPNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>