force-app/main/default/objects/ShippingDivision__c/fields/ShippingValue__c.field-meta.xml
<CustomField>
    <fullName>ShippingValue__c</fullName>
    <description>Campo criado para multiplicar a quantidade da remessa com o valor unitário.</description>
    <formula>IF(ISBLANK(RefuseReason__c), IF(Quantity__c = 0, ConfirmedQuantity__c, Quantity__c), (Quantity__c * -1)) * OrderItem__r.UnitPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Campo criado para multiplicar a quantidade da remessa com o valor unitário.</inlineHelpText>
    <label>Valor da Remessa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>