force-app/main/default/objects/ShippingDivision__c/fields/TableauShippingValue__c.field-meta.xml
<CustomField>
    <fullName>TableauShippingValue__c</fullName>
    <label>Valor da Remessa</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>