force-app/main/default/objects/ShippingDivision__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ExternalId__c</columns>
    <columns>DeliveryDate__c</columns>
    <columns>OrderItem__c</columns>
    <columns>Quantity__c</columns>
    <columns>ConfirmedQuantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>